# GameNro

./: .gitignore  Cargo.toml  README.md
data/config/: girlkundb.properties  girlkundb.properties.bak
data/girlkun/: girlkun.properties
src/: DataGame.rs  Inventory.rs  Item.rs  Location.rs  OptionCard.rs  Player.rs  PlayerSkill.rs  README.md  SideTaskTemplate.rs  TaskMain.rs  TaskPlayer.rs  Zone.rs  controller.rs  game_session.rs  macros.rs  main.rs  message.rs  nPoint.rs  workflow.md
src/data/: config_manager.rs  data_game.rs  game_session.rs  item_data.rs  mod.rs  waypoint.rs
src/entities/: account.rs  achievement_template.rs  array_head_2_frames.rs  bank_accounts.rs  bg_item_template.rs  box_item_actions.rs  box_item_drop_options.rs  box_item_drops.rs  caption.rs  categories_news.rs  clan_sv1.rs  clan_sv2.rs  comment.rs  comments.rs  cpanel.rs  dhvt_template.rs  flag_bag.rs  giftcode.rs  giftcode_item_options.rs  giftcode_items.rs  head_avatar.rs  history_event.rs  history_giftcode.rs  history_gold.rs  img_by_name.rs  intrinsic.rs  item_option_template.rs  item_shop.rs  item_shop_option.rs  item_template.rs  map_template.rs  market_item_options.rs  market_items.rs  mob_template.rs  mod.rs  naptien.rs  nclass.rs  news.rs  npc_template.rs  orders.rs  (+24 more)
src/features/: mod.rs  side_task_template.rs  task_player.rs
src/item/: inventory.rs  inventory_model.rs  inventory_service.rs  item.rs  item_dao.rs  item_manager.rs  item_option.rs  item_service.rs  item_time.rs  item_time_service.rs  item_utils.rs  item_validator.rs  mod.rs
src/map/: change_map_service.rs  (+12 more)
(+144 files in other folders)
